# servify

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.changeset/: config.json  flat-moles-lie.md  fresh-oranges-move.md  sixty-seals-melt.md
.ci-scripts/: generate-access-token.sh  release.rs  version.rs
.github/workflows/: approve-pr.yaml  approve-pr.yml  build-and-test.yml  cache-clean.yml  cache-cleanup.yaml  changeset.yaml  changeset.yml  dry-release.yaml  release.yaml  rust-ci.yaml  rust-ci.yml
servify/: CHANGELOG.md  Cargo.toml  README.md  package.json
servify-macro/: Cargo.toml
servify-macro/src/: lib.rs
servify/src/: lib.rs
servify/src/serial/: mod.rs
servify/src/tests/: expanded_1.rs  expanded_2.rs  mod.rs  simple_counter.rs  simple_counter_2.rs
servify/src/tests/simple_counter_file_split/: get.rs  increment.rs  reset.rs  set.rs
servify/tests/: expanded_1.rs  expanded_2.rs  mod.rs  sandbox1.rs  simple_counter.rs  simple_counter_2.rs
servify/tests/simple_counter_file_split/: get.rs  increment.rs  mod.rs  reset.rs  set.rs
servify_build/: CHANGELOG.md  Cargo.toml  README.md  package.json
servify_macro/: Cargo.toml  README.md  package.json
servify_macro/src/: export.rs  lib.rs  service.rs
servify_macro/src/util/: mod.rs  return_type_ext.rs  to_super.rs  type_path_ext.rs
servify_tests/: Cargo.toml  build.rs
