[package]
name = "servify"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
tokio = { version = "1.40.0", features = ["sync"] }
servify_macro = { path = "../servify_macro" }

[dev-dependencies]
tokio = { version = "1.40.0", features = ["sync", "rt", "macros", "time"] }
pretty_assertions = "1.4.1"
