[package]
name = "servify"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = """
A macro for effortlessly enabling message passing, inter-process communication, HTTP/TCP server functionality, and more with a unified implementation in struct methods.
"""

[dependencies]
tokio = { version = "1.40.0", features = ["sync"] }
servify_macro = { path = "../servify_macro" }

[dev-dependencies]
tokio = { version = "1.40.0", features = ["sync", "rt", "macros", "time"] }
pretty_assertions = "1.4.1"
