[package]
name = "servify_macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = """
Procedural macros for use with Servify
"""

[lib]
proc-macro = true

[dependencies]
case = "1.0.0"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
